force-app/main/default/objects/Family_Guest_Attendance__c/Family_Guest_Attendance__c.object-meta.xml
<CustomObject>
    <description>Used for recording details of non-registered people who attend a program as a guest of a family</description>
    <label>Family Guest Attendance</label>
    <nameField>
        <displayFormat>FGA-{000}</displayFormat>
        <label>Family Guest Attendace Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Family Guest Attendances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>