force-app/main/default/objects/Family_Guest_Attendance__c/fields/Family_Member_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Family_Member_Relationship__c</fullName>
    <label>Family Member Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aunt/Uncle</fullName>
            </value>
            <value>
                <fullName>Grandparent</fullName>
            </value>
            <value>
                <fullName>Cousin</fullName>
            </value>
            <value>
                <fullName>Family Friend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>